--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -41,3 +41,29 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+/* <div class="features">
+                <div class="content">
+                    <div class="body-4">
+                        <div class="features-title fat-1">
+                            <strong class="features-1"
+                                >Take the next step toward your personal and
+                                professional goals with Lesson.</strong
+                            >
+                            <p class="features-2">
+                                Take the next step toward. Join now to receive
+                                personalized and more recommendations from the
+                                full Coursera catalog.
+                            </p>
+
+                            <a href="#!" class="btn features-btn">Join Now</a>
+                        </div>
+                        <div class="features-bg">
+                            <img
+                                src="./assets/img/features-img2png.png"
+                                alt="Learner outcomes through our awesome platform"
+                                class="img-features-2 fat-2"
+                            />
+                        </div>
+                    </div>
+                </div>
+            </div> */
